assets/css/style.css
/* ... */
#footer .footer-top .footer-newsletter form input[type="submit"]:hover {
  background: #ffcd6b;
}

#footer .copyright {
  
    padding-top: 30px;
}

#footer .social-links {
  
    text-align:right;
}

#footer .credits {
  padding-top: 10px;
  text-align: center;
  font-size: 13px;
  color: #fff;
}

#footer h4 a {
  color: white;
}

#homeEvents {
  padding: 500px 100px 100px 100px;
}

/*     Contact Page */

#contactBody {
  background-image: url('../img/contactPageBackground.jpg');
}

.contactCentered {
  position: absolute;
  height: 100%;
  top: 15vh;
  left: 0vw;
  width: 100%;
  transform: translate(-35vh, -0vw);
  text-align: center;
}

.contactBottom {
  position: absolute;
  top: 59vh;
  left: 45vw;
  transform: translate(-40vh, 0vw);
  text-align: center;
}

.verticalSplitLineContact {
  border-left: 2px solid #f2a413;
  height: 75%;
  position: fixed;
  top: 15vh;
  left: 50vw;
  z-index: 1;
  overflow-x: hidden;
  padding-top: 20%;
}

input[type="text"],
select {
  width: 60%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  color: #dfdfdf;
  background-color: Transparent;
  background-repeat: no-repeat;
  border: 2px solid #dfdfdf;
  border-radius: 4px;
  box-sizing: border-box;
}

/* Contact Page Buttons */

button[type="button"] {
  width: 100%;
  background-color: #0cb0e3;
  color: white;
  font-size: 15px;
  font-weight: bold;
  padding: 14px 15px;
  text-align: center;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  height: 50px;
  display: inline-block;
}

button[type="button"]:hover {
  background-color: #8656a0;
  box-shadow: 0 5px 15px #8656a0;
}

/* Contact Page Mobile */

@media screen and (max-width: 1600px) {
  .verticalSplitLineContact {
    border-left: unset;
    height: 0;
    position: absolute;
    transform: translate(0, 15vh);
    left: unset;
    overflow-x: hidden;
  }

  .contactCentered {
    position: unset;
    top: unset;
    left: unset;
    width: unset;
    transform: translate(10vw, 15vh);
    text-align: center;
  }

  .contactBottom {
    position: unset;
    top: unset;
    left: unset;
    width: unset;
    transform: translate(10vw, 15vh);
    text-align: center;
  }
}
#footer h4 a {
  text-decoration-color: #ffc451;
}


/* Resources Page */

.inventionProcessBox {
  position:relative;
  margin: 5vh auto;
  height: auto;
  color: white;
  border: 3px soild #73AD21;
  width: 80%;
  padding: 3%;
  background-color: #124361; /* For browsers that do not support gradients */
  background-image: linear-gradient(to right, #124361 , #141B2F); 
}

.resourcesBoxesLeft{
  margin: 2% 5% 2% 10%;
  height: auto;
  color: white;
  float: left;
  border: 3px soild #73AD21;
  width: 35%;
  padding: 3%;
  background-color: #124361; /* For browsers that do not support gradients */
  background-image: linear-gradient(to right, #124361 , #141B2F); 
}

.resourcesBoxesRight{
  margin: 2% 10% 2% 5%;
  height: auto;
  color: white;
  float: right;
  border: 3px soild #73AD21;
  width: 35%;
  padding: 3%;
  background-color: #124361; /* For browsers that do not support gradients */
  background-image: linear-gradient(to right, #124361 , #141B2F); 
}

@media screen and (max-width: 1000px) { 

  .inventionProcessBox {
    position: relative;
    width: 100%;
    margin: 5%;
  }

  .resourcesBoxesLeft {
    position: relative;
    float: unset;
    width: 100%;
    margin-top: 5%;
    margin-left: 5%;
  }
  
  .resourcesBoxesRight {
    position: relative;
    float: unset;
    width: 100%;
    margin-right: 5%;
  }
}

.resourcesLightBulb {
  height: 25vh;
  float: right;
}

/* Resources Page Mobile */

#resourceBody {
  background-color: #141B2E;
}

/* Button Templates */



button[type="buttonNormal"] {
  background-color: var(--irisBlue);
  color:  var(--gainsboro);
  font-family: "Metropolis";
  font-size: bold;
  text-transform: uppercase;
  text-align: center;
  min-width: 40%;
  max-width: 50%;
  text-align: center;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  height: 50px;
  display: inline-block;
}

button[type="buttonNormal"]:hover {
  background-color: var(--studio);
  box-shadow: 0 5px 15px var(--studio);
  color:  var(--gainsboro);
  font-family: "Metropolis";
  font-size: bold;
  text-transform: uppercase;
}

button[type="buttonNormal"]:focus {
  background-color: Transparent;
  background-repeat: no-repeat;
  color: var(--gainsboro);
  font-family: "Metropolis";
  font-size: bold;
  text-transform: uppercase;
  min-width: 40%;
  max-width: 50%;
  border-radius: 0;
  cursor: pointer;
  border: 2px solid var(--irisBlue);
  box-shadow: 0 5px 15px var(--irisBlue);
}

button[type="buttonNormal"]:active {
  font-family: "Metropolis";
  font-size: bold;
  text-transform: uppercase;
  min-width: 40%;
  max-width: 50%;
  border: 2px solid var(--irisBlue);
  color:  var(--gainsboro);
} 

button[type="buttonNormal"]:disabled {
  font-family: "Metropolis";
  font-size: bold;
  text-transform: uppercase;
  background-color: var(--stormGrey);
  color:  var(--gainsboro);
} 

button[type="buttonDonate"] {
  background-color: Transparent;
  background-repeat: no-repeat;
  color: var(--irisBlue);
  font-family: "Metropolis";
  font-size: bold;
  padding: 1%;
  text-transform: uppercase;
  min-width: 40%;
  max-width: 50%;
  height: auto;
  border-radius: 4px;
  cursor: pointer;
  border: 2px solid var(--irisBlue);
  box-shadow: 0 5px 15px var(--irisBlue);
}

button[type="buttonDonate"]:hover {
  background-color: var(--studio);
  color: var(--gainsboro);
  border: 2px solid var(--studio);
  box-shadow: 0 5px 15px var(--studio);
}

